[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "menu-cli"
autors = [
	{name = "Agustín Carpio", email = "aguscarpio@gmail.com"}
]
version = "0.0.1"
dependencies = [
	"requests",
	"fuzzyfinder==2.1.0",
	"greenlet==3.0.3",
	"msgpack==1.0.8",
	"packaging==24.1",

]
description = "Python package to create command-line interactive menus in an extensible, simple and modular way."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://https://github.com/Aguscarpio/menu-cli"
Issues = "https://https://github.com/Aguscarpio/menu-cli/issues"
